--- a/Src/Backend/Dockerfile
+++ b/Src/Backend/Dockerfile
@@ -3,6 +3,8 @@ FROM ubuntu
 EXPOSE 13131
 EXPOSE 8887
 
-COPY . /tem
+COPY . /mnt
 
-RUN apt update
+RUN apt update 
+RUN apt install wget
+RUN wget https://dl.google.com/go/go1.11.5.linux-amd64.tar.gz
