--- a/Src/Backend/Dockerfile
+++ b/Src/Backend/Dockerfile
@@ -9,7 +9,7 @@ RUN apt update
 RUN apt install -y wget
 
 RUN wget https://dl.google.com/go/go1.11.5.linux-amd64.tar.gz
-RUN sudo tar -C /usr/local -xzf go1.11.5.linux-amd64.tar.gz
+RUN tar -C /usr/local -xzf go1.11.5.linux-amd64.tar.gz
 RUN export PATH=$PATH:/usr/local/go/bin
 RUN go version
 
