--- a/Src/Backend/Dockerfile
+++ b/Src/Backend/Dockerfile
@@ -11,6 +11,7 @@ RUN apt install -y wget
 RUN wget https://dl.google.com/go/go1.11.5.linux-amd64.tar.gz
 RUN tar -C /usr/local -xzf go1.11.5.linux-amd64.tar.gz
 RUN export PATH=$PATH:/usr/local/go/bin
-CMD["/bin/sh", "-c","go version"]
+
+CMD["go version"]
 
 # CMD ["/bin/sh", "-c", "cd /mnt/merchandise-manager/Src/Backend; go run main.go;"]
