--- a/Src/Backend/Dockerfile
+++ b/Src/Backend/Dockerfile
@@ -40,9 +40,9 @@ RUN apk update && apk add alpine-sdk git && rm -rf /var/cache/apk/*
 RUN mkdir -p /api
 WORKDIR /api
 
-COPY go.mod .
-COPY go.sum .
-RUN go mod download
+# COPY go.mod .
+# COPY go.sum .
+# RUN go mod download
 
 COPY . .
 RUN go build -o ./app ./Src/Backend/main.go
