--- a/Src/Backend/Dockerfile
+++ b/Src/Backend/Dockerfile
@@ -40,12 +40,18 @@ RUN apk update && apk add alpine-sdk git && rm -rf /var/cache/apk/*
 RUN mkdir -p /api
 WORKDIR /api
 
+EXPOSE 13131
 # COPY go.mod .
 # COPY go.sum .
 # RUN go mod download
 
 COPY . .
 RUN go version
+RUN go get -u github.com/gin-contrib/cors
+RUN go get -u github.com/gin-gonic/gin
+RUN go get -u golang.org/x/crypto/bcrypt
+RUN go get -u github.com/go-sql-driver/mysql
+
 # RUN go build -o ./app ./Src/Backend/main.go
 
 # FROM alpine:latest
