--- a/Src/Backend/Dockerfile
+++ b/Src/Backend/Dockerfile
@@ -53,8 +53,10 @@ RUN go get -u golang.org/x/crypto/bcrypt
 RUN go get -u github.com/go-sql-driver/mysql
 
 RUN go run ./Src/Backend/main.go
-# RUN go build -o ./app ./Src/Backend/main.go
-
+RUN go build -o ./Src/Backend/main.tem ./Src/Backend/main.go
+WORKDIR ./Src/Backend/
+RUN pwd
+RUN ls
 # FROM alpine:latest
 
 # RUN apk update && apk add ca-certificates && rm -rf /var/cache/apk/*
